improves audit to examine past actions
